@@ -1,9 +1,14 @@
 Changes in version 0.1.2.2-alpha - 2006-??-??
 
+  o Security Fixes, minor
+    - If a client asked for a server by name, and we didn't have a
+      descriptor for a named server with that name, we might return an old
+      one.
+
   o Minor Bugfixes
     - Small performance improvements on parsing descriptors.
     - Major performance descriptor on inserting descriptors; change
-      algorithm from O(n^2) to O(n). [Mostly.]
+      algorithm from O(n^2) to O(n).
     - Make the common memory allocation path faster on machines where
       malloc(0) returns a pointer.
 
